--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Build & Publish
+name: Build & Deploy
 
 on:
   push:
@@ -21,3 +21,5 @@ jobs:
         run: yarn install
       - name: Build website
         run: yarn build
+      - name: Deploy website
+        run: yarn deploy
