Added debug to yarn deploy

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,4 +22,6 @@ jobs:
       - name: Build website
         run: yarn build
       - name: Deploy website
+        env:
+          NODE_DEBUG: gh-pages
         run: yarn deploy
